1998-06-11  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* transports/mailbox/mailbox.c:
	    Mistakes after code movements in  program()  function :-(

	* smtpserver/smtpdata.c, smtpserver/smtpserver.c,
	  smtpserver/smtpcmds.c:
	    Make the verbose debug log more readable -- guaranteed
	    session end-points to be findable:
	       ######w \t 221 ...
	       ######- \t ...

	* smtpserver/smtpcmds.c:
	    Change ETRN reply texts a bit; don't anymore speak of TURNME..

1998-06-09  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* proto/cf/aliases.cf, proto/cf/fqdnaliases.cf, proto/cf/p-usenet.cf,
	  proto/cf/rrouter.cf, proto/cf/standard.cf,
	  proto/db/aliases.zmsh.example:
	    Major reorganisation of scripts;
	    - All things that have something to do with local users
	      are clustered into aliases.cf. (Away from  standard.cf,
	      and from  rrouter.cf)
	    - A new calling arguments for  routeuser (aliases.cf,
	      and rrouter.cf)
	    - Smart "+plustail" processing into fqdnaliases.cf
	    - Hooks in between p-usenet.cf, and aliases.cf to handle
	      'newsgroup' database.
	    With these the system can handle usernames that have
	    dots in them, and unifying multiple (in theory: arbitary
	    number of: aliases.zmsh.example) aliases, and other databases.

1998-06-08  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* include/policy.h, smtpserver/policytest.c, smtpserver/policytest.h,
	  smtpserver/readpolicy.c:
	    Altered "relaycustnet" semantics a bit.  Even though it will
	    still allow unlimited inbound feed, it will at first fo DNS
	    verification on MAIL FROM, and RCPT TO headers -- accepts
	    recipients if said recipients have any DNS A/MX entry at all,
	    and likewise with sender...
	    Introduced new attribute:  "fulltrustnet +"  which can
	    be used in case there absolutely is need for not checking
	    input addresses (like in a very high-volume email traffic
	    in between vger.rutgers.edu and nic.funet.fi ...)
